--- a/CinemaBook/Scence/Manager/HomeReportManager/view/section2/ReportTicketAllTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/view/section2/ReportTicketAllTableViewCell.xib
@@ -28,8 +28,8 @@
                                     <constraint firstAttribute="width" constant="30" id="iLv-ms-mEK"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DOANH THU BÁN VÉ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h95-gC-4pc">
-                                <rect key="frame" x="50" y="10.333333333333334" width="160" height="19.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BÁO CÁO TỔNG QUAN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h95-gC-4pc">
+                                <rect key="frame" x="50" y="10.333333333333334" width="173" height="19.333333333333329"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
