--- a/CinemaBook/Scence/Manager/HomeReportManager/ManageReport/view/ManageReportViewController.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/ManageReport/view/ManageReportViewController.xib
@@ -129,6 +129,9 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="164.33333333333334" height="142"/>
                                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <state key="normal" title="Button"/>
+                                                                    <connections>
+                                                                        <action selector="btn_makeToReportMovie:" destination="-1" eventType="touchUpInside" id="g0T-hq-zV5"/>
+                                                                    </connections>
                                                                 </button>
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
