--- a/CinemaBook/Scence/Manager/HomeReportManager/ManageReport/view/ManageReportViewController.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/ManageReport/view/ManageReportViewController.xib
@@ -195,6 +195,9 @@
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RJZ-JB-5BO">
                                                                     <rect key="frame" x="0.0" y="0.0" width="164.66666666666666" height="142"/>
                                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <connections>
+                                                                        <action selector="btn_makeToReportFood:" destination="-1" eventType="touchUpInside" id="uOe-fK-h6s"/>
+                                                                    </connections>
                                                                 </button>
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
