--- a/CinemaBook/Scence/Manager/HomeReportManager/view/section3/ReportMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/view/section3/ReportMovieTableViewCell.xib
@@ -89,6 +89,9 @@
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain"/>
+                                        <connections>
+                                            <action selector="btn_makePopToReportMovie:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Pkz-u6-f7f"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
