--- a/CinemaBook/Scence/Manager/HomeReportManager/view/section4/ReportpProductTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/view/section4/ReportpProductTableViewCell.xib
@@ -92,6 +92,9 @@
                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="btn_showreportfood:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="McH-OU-SAK"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
